objects/FW_Service_Status_Log__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>Case__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Number__c</fullName>
        <formula>Case__r.Account_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CalloutTime__c</fullName>
        <label>Callout Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Integration Status Logs</relationshipLabel>
        <relationshipName>Integration_Status_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <formula>Case__r.GEMS_Effective_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ElapsedTime__c</fullName>
        <formula>InputProcessingTime__c +  CalloutTime__c +  OutputProcessingTime__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Elapsed Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EndTime__c</fullName>
        <label>End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ErrorCode__c</fullName>
        <label>Error Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ErrorDescription__c</fullName>
        <label>Error Description</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>InputProcessingTime__c</fullName>
        <label>Input Processing Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OutputProcessingTime__c</fullName>
        <label>Output Processing Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RequestBody__c</fullName>
        <label>Request Body</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ResponseBody__c</fullName>
        <label>Response Body</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>StartTime__c</fullName>
        <label>Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UID__c</fullName>
        <externalId>true</externalId>
        <label>Unique ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>FW Service Status Log</label>
    <listViews>
        <fullName>AR_Cancellation</fullName>
        <booleanFilter>(1 OR 2) AND 3</booleanFilter>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>RequestBody__c</columns>
        <columns>ResponseBody__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>equals</operation>
            <value>LGNA_AR_Cancellation</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>equals</operation>
            <value>GEMS_AccountStructureStatusService</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>AR_Cancellation</label>
    </listViews>
    <listViews>
        <fullName>All_New</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>StartTime__c</columns>
        <columns>RequestBody__c</columns>
        <columns>ResponseBody__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <label>All New</label>
    </listViews>
    <listViews>
        <fullName>GEMS_AccountStructureStatusService</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>StartTime__c</columns>
        <columns>EndTime__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>ErrorDescription__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>equals</operation>
            <value>GEMS_AccountStructureStatusService</value>
        </filters>
        <label>GEMS_AccountStructureStatusService</label>
    </listViews>
    <listViews>
        <fullName>GetAvailablePlanService</fullName>
        <columns>NAME</columns>
        <columns>ErrorCode__c</columns>
        <columns>Status__c</columns>
        <columns>CalloutTime__c</columns>
        <columns>EndTime__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>equals</operation>
            <value>GetAllAvailablePlanService</value>
        </filters>
        <label>GetAvailablePlanService</label>
    </listViews>
    <listViews>
        <fullName>SGR_UREInvokePlanMappingService</fullName>
        <columns>NAME</columns>
        <columns>ErrorCode__c</columns>
        <columns>Status__c</columns>
        <columns>CalloutTime__c</columns>
        <columns>EndTime__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>equals</operation>
            <value>invokePlanMappingService</value>
        </filters>
        <label>SGR_UREInvokePlanMappingService</label>
    </listViews>
    <listViews>
        <fullName>Today_debug</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>ErrorCode__c</columns>
        <columns>StartTime__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today</label>
    </listViews>
    <listViews>
        <fullName>URE_Age_Rate</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>ErrorCode__c</columns>
        <columns>StartTime__c</columns>
        <columns>EndTime__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>equals</operation>
            <value>invokeUREAgeRateService</value>
        </filters>
        <label>URE Age Rate</label>
    </listViews>
    <nameField>
        <label>Service Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Integration Status Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>